--- a/.gitignore
+++ b/.gitignore
@@ -19,18 +19,25 @@ artifacts/
 ScaffoldingReadMe.txt
 *.nupkg
 *.snupkg
-~$*
-*~
-CodeCoverage/
 *.binlog
+publish/
+out/
+packages/
+!**/packages/build/
+
+## Test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+*.received.*
+*.verified.*
 
-## Secrets & environment
-*.env
+## Secrets & Environment
+.env
+.env.*
+!.env.example
 *.env.local
 *.env.*.local
 appsettings.Development.json
@@ -44,6 +51,10 @@ secrets.json
 *.userosscache
 *.sln.docstates
 *.rsuser
+~$*
+*~
+
+## VS Code
 .vscode/
 *.code-workspace
 
@@ -55,10 +66,13 @@ secrets.json
 node_modules/
 dist/
 dist-ssr/
-*.local
+.vite/
 .cache/
 
-## npm/yarn/pnpm
+## Storybook
+storybook-static/
+
+## npm / yarn / pnpm
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -74,6 +88,8 @@ docker-compose.override.yml
 
 ## Coverage
 coverage/
+.coverage/
+CodeCoverage/
 *.coverage
 *.coveragexml
 lcov.info
